# tableau-cli

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
skills/: SKILL.md
skills/references/: cli.md  installation.md
skills/tableau-cli/: SKILL.md
skills/tableau-cli/references/: cli.md  installation.md
src/: index.ts
src/api/: client.ts
src/api/apis/: authenticationApi.ts  contentExplorationApi.ts  datasourcesApi.ts  metadataApi.ts  paginationParameters.ts  viewsApi.ts  vizqlDataServiceApi.ts  workbooksApi.ts
src/api/methods/: authenticatedMethods.ts  authenticationMethods.ts  contentExplorationMethods.ts  datasourcesMethods.ts  metadataMethods.ts  viewsMethods.ts  vizqlDataServiceMethods.ts  workbooksMethods.ts
src/api/types/: contentExploration.ts  tags.ts  view.ts  workbook.ts
src/auth/: withAuth.ts
src/commands/: config.ts  datasources.ts  search.ts  views.ts  workbooks.ts
src/config/: store.ts  types.ts
src/errors/: cliError.ts  vdsErrorHandler.ts
src/output/: format.ts  json.ts  table.ts
src/tableau_cli/: cli.py
src/tableau_cli/api/: client.py
src/tableau_cli/auth/: with_auth.py
src/tableau_cli/commands/: config_cmd.py  convert_cmd.py  datasources_cmd.py  projects_cmd.py  search_cmd.py  views_cmd.py  workbooks_cmd.py
src/tableau_cli/config/: store.py  types.py
src/tableau_cli/errors/: cli_error.py  vds_error_handler.py
src/tableau_cli/output/: format.py  json_output.py  table_output.py
src/tableau_cli/utils/: _convert_worker.py  convert.py  datasource_metadata_utils.py  lineage_utils.py  paginate.py  search_content_utils.py  tableau_version.py  web_url.py
src/utils/: axios.ts  datasourceMetadataUtils.ts  paginate.ts  searchContentUtils.ts
