[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableau-cli"
version = "0.1.0"
description = "CLI tool for interacting with Tableau Server/Cloud"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
convert = [
    "pantab>=4.0",
    "polars>=1.0",
    "pyarrow>=15.0",
]

[project.scripts]
tableau-cli = "tableau_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tableau_cli"]
