[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableau-cli"
version = "0.1.0"
description = "CLI for Tableau Server/Cloud, designed for AI agent integration"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Richard Wang" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/i-richardwang/tableau-cli"

[project.optional-dependencies]
convert = [
    "pantab>=4.0",
    "polars>=1.0",
    "pyarrow>=15.0",
]
dev = [
    "ruff>=0.11",
]

[project.scripts]
tableau-cli = "tableau_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tableau_cli"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
